--- a/a/ag/age/ageofconan.com.html
+++ b/a/ag/age/ageofconan.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ageofconan.com privacy policy that was archived on 2013-12-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131206010606id_/http%3A//www.ageofconan.com/corporate/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ageofconan.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214233448id_/http%3A//www.ageofconan.com/corporate/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <meta charset="utf-8">
@@ -119,15 +119,15 @@
         <a href="http://www.funcom.com/games" onclick="_gaq.push(['_trackPageview', 'umbrella/game_accountseeall']);"><span class="next anivers">See all games</span></a>
 </div>
     <div id="um_ct_news" class="ctbox"><p style="background-image:url(http://l3cdn.funcom.com/funcomportal/products/lego/small_lmf.jpg);">
+<a onclick="_gaq.push(['_trackPageview', 'umbrella/news/take_a_grand_tour_of_lego_minifigures_online']);" href="http://www.funcom.com/news/take_a_grand_tour_of_lego_minifigures_online">TAKE A GRAND TOUR OF LEGO® MINIFIGURES ONLINE</a> (2013-12-18)
+</p><hr>
+
+<p style="background-image:url(http://l3cdn.funcom.com/funcomportal/products/lego/small_lmf.jpg);">
 <a onclick="_gaq.push(['_trackPageview', 'umbrella/news/legominifigures_online_beta_registration_now_open']);" href="http://www.funcom.com/news/legominifigures_online_beta_registration_now_open">LEGO®MINIFIGURES ONLINE BETA REGISTRATION NOW OPEN!</a> (2013-11-04)
 </p><hr>
 
 <p style="background-image:url(http://l3cdn.funcom.com/funcomportal/thumbnails/small/small_tsw.png);">
 <a onclick="_gaq.push(['_trackPageview', 'umbrella/news/the_secret_world_stars_in_new_feature_film']);" href="http://www.funcom.com/news/the_secret_world_stars_in_new_feature_film">THE SECRET WORLD STARS IN NEW FEATURE FILM</a> (2013-10-22)
-</p><hr>
-
-<p style="background-image:url(http://l3cdn.funcom.com/funcomportal/products/lego/small_lmf.jpg);">
-<a onclick="_gaq.push(['_trackPageview', 'umbrella/news/funcom_reveals_lego_minifigures_online']);" href="http://www.funcom.com/news/funcom_reveals_lego_minifigures_online">FUNCOM REVEALS LEGO® MINIFIGURES ONLINE</a> (2013-08-29)
 </p><hr>
 
 <a onclick="_gaq.push(['_trackPageview', 'umbrella/news_seeall']);" href="http://www.funcom.com/news"><div class="next anivers">See all news</div></a></div>
