--- a/t/te/teb/tebrowser.com.html
+++ b/t/te/teb/tebrowser.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tebrowser.com privacy policy that was archived on 2013-08-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130813065900id_/http%3A//www.tebrowser.com/policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tebrowser.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214234411id_/http%3A//www.tebrowser.com/policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US" xml:lang="en"><head>
 	<title>TEBrowser 2.0 by Webily</title>
@@ -69,9 +69,9 @@
 					
 		<div class="shorttestimonial" onclick="document.location='testimonials.html'">
 			<div id="shorttestimonial1">
-		<p class="user"><img src="index.php?tesp=18" width="60"></p>
-		"It blows all other browsers away..."<br>
-		<p class="signature">Mark "Da Bomb" Brown<br>Proud Owner of Traffic Dynamite.com</p>
+		<p class="user"><img src="index.php?tesp=1" width="60"></p>
+		"...this is the best browser for Traffic Exchanges I've ever seen."<br>
+		<p class="signature">Dave Cottrell</p>
 	</div>
 			<div id="shorttestimonial2" class="opacity0"></div>
 		</div>
