--- a/p/pr/pre/preservearticles.com.html
+++ b/p/pr/pre/preservearticles.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the preservearticles.com privacy policy that was archived on 2013-10-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131023000558id_/http%3A//www.preservearticles.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the preservearticles.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214235919id_/http%3A//www.preservearticles.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="en-gb"><head>
 
@@ -19,9 +19,9 @@ var isRTL = false;
   
   <title>Privacy Policy</title>
   <link href="http://www.preservearticles.com/index.php?rsd=RealSimpleDiscovery" rel="EditURI" type="application/rsd+xml" title="RSD">
-  <link rel="stylesheet" href="/t3-assets/cssdde82.css" type="text/css">
-  <link rel="stylesheet" href="/t3-assets/css8b11e.css" type="text/css">
-  <script type="text/javascript" src="/t3-assets/jsf111a.js"></script>
+  <link rel="stylesheet" href="/t3-assets/csse058c.css" type="text/css">
+  <link rel="stylesheet" href="/t3-assets/cssbd251.css" type="text/css">
+  <script type="text/javascript" src="/t3-assets/js01883.js"></script>
 
 
 
@@ -143,7 +143,7 @@ var isRTL = false;
 	<p class="ja-day clearfix">
 	  	</p>
 	 
-	<p class="ja-updatetime"><span>Last update</span><em>02:57:18 PM</em></p>
+	<p class="ja-updatetime"><span>Last update</span><em>11:21:17 AM</em></p>
 	
 		
 	 -->		 
@@ -230,7 +230,7 @@ var isRTL = false;
 <p align="justify">www.preservearticles.com has no access to or control over these  cookies that are used by third-party advertisers. You should consult the  respective privacy policies of these third-party ad servers for more detailed  information on their practices as well as for instructions about how to opt-out  of certain practices. www.preservearticles.com privacy policy does not apply to,  and we cannot control the activities of, such other advertisers or web sites.</p>
 <p align="justify">If you wish to disable cookies, you may do so through your  individual browser options. More detailed information about cookie management  with specific web browsers can be found at the browsers' respective  websites.</p>
 
-<div class="jvrel_box_bottom_left" style=" width: 100%; ">  <div class="jvrel_box_title">You May Also Like:</div>  <div class="jvrel_box_info"><ul><li><a title="3 major types of Fiscal measures used by government for correcting excess and deficient demands" href="/201103144493/fiscal-policy.html">3 major types of Fiscal measures used by government for correcting excess and deficient demands</a></li><li><a title="The Main Targets Fixed in the National Population Policy 2000, India" href="/2013082133372/the-main-targets-fixed-in-the-national-population-policy-2000-india.html">The Main Targets Fixed in the National Population Policy 2000, India</a></li></ul>  </div></div></div>
+<div class="jvrel_box_bottom_left" style=" width: 100%; ">  <div class="jvrel_box_title">You May Also Like:</div>  <div class="jvrel_box_info"><ul><li><a title="Analyze the main objectives and goals of National Policy on Empowerment of Women" href="/201107308831/analyze-the-main-objectives-and-goals-of-national-policy-on-empowerment-of-women.html">Analyze the main objectives and goals of National Policy on Empowerment of Women</a></li><li><a title="The changes occurred in India due to adoption Globalization Policy" href="/201104215588/changes-occurred-in-india-due-to-adoption-globalization-policy.html">The changes occurred in India due to adoption Globalization Policy</a></li></ul>  </div></div></div>
 
 
 
@@ -313,20 +313,6 @@ var isRTL = false;
 <p style="text-align: justify;">Before preserving your articles on this site, please read the following pages:<br><br>1. <a href="/content-quality-guidelines.html">Content Guidelines</a> 2. <a href="/terms-of-service.html">TOS </a>3.<a href="/privacy-policy.html"> Privacy Policy</a> 4. <a href="/disclaimer.html">Disclaimer </a>5. <a href="/copyright-infringement-takedown-notification-policy-preservearticlescom.html">Copyright</a></p>
 <p style="text-align: center;"><a href="/submit-form/myform.html"><img src="/images/stories/submit-btn.png" border="0" alt="submit-button" width="140" height="40"></a></p>		</div>
     </div>
-		<div class="ja-moduletable moduletable  clearfix" id="Mod220">
-						<div class="ja-box-ct clearfix">
-		<script type="text/javascript"><!--
-google_ad_client = "ca-pub-0989790830026725";
-/* PA 300x250 */
-google_ad_slot = "7436173988";
-google_ad_width = 300;
-google_ad_height = 250;
-google_page_url = "http://www.preservearticles.com/";
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>		</div>
-    </div>
 		<div class="ja-moduletable moduletable_hilite1  clearfix" id="Mod222">
 						<h3><span>Search Articles</span></h3>
 				<div class="ja-box-ct clearfix">
@@ -353,6 +339,15 @@ google_page_url = "http://www.preservearticles.com/";
 	</form>
 	<script type="text/javascript" src="http://www.google.com/cse/brand?form=cse-search-box&lt;=en"></script><b></b>
 </div>		</div>
+    </div>
+		<div class="ja-moduletable moduletable  clearfix" id="Mod220">
+						<div class="ja-box-ct clearfix">
+		<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- PA 300x600 right -->
+<ins class="adsbygoogle" style="display:inline-block;width:300px;height:600px" data-ad-client="ca-pub-0989790830026725" data-ad-slot="2011884400"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>		</div>
     </div>
 	
 			</div>
