--- a/z/ze/zee/zeemind.com.html
+++ b/z/ze/zee/zeemind.com.html
@@ -1,12 +1,10 @@
-<!--The following is the downloaded HTML source of the zeemind.com privacy policy that was archived on 2013-05-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130509061956id_/http%3A//www.zeemind.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the zeemind.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215004757id_/http%3A//www.zeemind.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html lang=""><head>
-		
-		<!-- PUBLIC NOTICE: This content is under copyright. Duplication is prohibited.
-		Used with permission by Zeemind LLC. -->
-		
-
+<!DOCTYPE html><html lang=""><!-- PUBLIC NOTICE: This content is protected under international copyright law.
+	Except where otherwise noted, duplication or distribution without prior
+	authorization is prohibited.
+	Distributed at zeemind.com with permission, by Zeemind LLC. --><head>
 		
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 
