--- a/i/in/inb/inbusiness.com.html
+++ b/i/in/inb/inbusiness.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the inbusiness.com privacy policy that was archived on 2013-09-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130917190127id_/http%3A//www.inbusiness.com/PrivacyPolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the inbusiness.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215004905id_/http%3A//www.inbusiness.com/PrivacyPolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="EN" lang="EN" dir="ltr" style="" class=" js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths"><!-- header and meta information for the site --><head>
 <link rel="shortcut icon" type="image/ico" href="http://www.inbusiness.com/favicon.ico">
@@ -7,9 +7,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta http-equiv="imagetoolbar" content="no">
 <!-- main stylesheet-->
-<link rel="stylesheet" href="/Content/main.css" type="text/css">
+<link rel="stylesheet" href="/Content/main092513a.css" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet" type="text/css">
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//rum-static.pingdom.net/prum.min.js"></script><script type="text/javascript" id="janrainAuthWidget" src="https://rpxnow.com/js/lib/inbusiness/engage.js"></script><script src="/Scripts/modernizr-2.6.2.js"></script>
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" id="janrainAuthWidget" src="https://rpxnow.com/js/lib/inbusiness/engage.js"></script><script src="/Scripts/modernizr-2.6.2.js"></script>
 
 <script src="/Scripts/jquery-1.8.2.js"></script>
 
@@ -19,7 +19,7 @@
     if (typeof window.janrain !== 'object') window.janrain = {};
     if (typeof window.janrain.settings !== 'object') window.janrain.settings = {};
     
-    janrain.settings.tokenUrl = 'http://inbusiness.com/auth_info?url=http://inbusiness.com/PrivacyPolicy';
+    janrain.settings.tokenUrl = 'http://www.inbusiness.com/auth_info?url=http://www.inbusiness.com/PrivacyPolicy';
 
     function isReady() { janrain.ready = true; };
     if (document.addEventListener) {
@@ -42,26 +42,15 @@
     s.parentNode.insertBefore(e, s);
 })();
 </script>
-<script>
-var _prum = [['id', '51a90122abe53d7927000000'],
-             ['mark', 'firstbyte', (new Date()).getTime()]];
-(function() {
-    var s = document.getElementsByTagName('script')[0]
-      , p = document.createElement('script');
-    p.async = 'async';
-    p.src = '//rum-static.pingdom.net/prum.min.js';
-    s.parentNode.insertBefore(p, s);
-})();
-</script>
 </head>
 
 <body style="overflow-y: scroll;">
 	<div id="wrap-header">
   	<div id="header">
   		<a href="/">
-  			<img id="logo" src="/Images/LogoV2.png" alt="InBusiness">
+  			<img id="logo" src="/Images/LogoV2.png" border="0" alt="InBusiness">
   		</a>	
-  		<h3>Business Profiles and Marketing Resources</h3>
+  		<h3>Business Directory and Business Profiles</h3>
   		<div id="social">
   		
   		<ul>
@@ -136,7 +125,11 @@ The contents of your online communications, as well as other information about y
 In the event that our ownership may change as a result of a merger or acquisition by another company, your InBusiness information may be transferred in connection with such merger or acquisition. 
 </p>
 <p>
-You may request that we modify or delete information in your business profile by contacting <a href="mailto:customerservice@inbusiness.com">customerservice@inbusiness.com</a>. We do not guarantee that such changes will be made or when such changes will be made.
+You may request that we modify or delete information in your business profile by contacting <a href="mailto:support@inbusiness.com">support@inbusiness.com<script type="text/javascript">
+/* <![CDATA[ */
+(function(){try{var s,a,i,j,r,c,l,b=document.getElementsByTagName("script");l=b[b.length-1].previousSibling;a=l.getAttribute('data-cfemail');if(a){s='';r=parseInt(a.substr(0,2),16);for(j=2;a.length-j;j+=2){c=parseInt(a.substr(j,2),16)^r;s+=String.fromCharCode(c);}s=document.createTextNode(s);l.parentNode.replaceChild(s,l);}}catch(e){}})();
+/* ]]> */
+</script></a>. We do not guarantee that such changes will be made or when such changes will be made.
 </p>
 <h2>Cookies, Advertising Networks</h2>
 <p>
@@ -165,7 +158,11 @@ Use of this site is subject to our Terms of Use Agreement.
 </p>
 <h2>Questions</h2>
 <p>
-If you have further questions or concerns that have not been addressed in this statement, please send your inquiries to: <a href="mailto:customerservice@inbusiness.com">customerservice@inbusiness.com</a>. Please be sure to include your name, email address, and daytime phone number in case we wish to contact you.
+If you have further questions or concerns that have not been addressed in this statement, please send your inquiries to: <a href="mailto:support@inbusiness.com">support@inbusiness.com<script type="text/javascript">
+/* <![CDATA[ */
+(function(){try{var s,a,i,j,r,c,l,b=document.getElementsByTagName("script");l=b[b.length-1].previousSibling;a=l.getAttribute('data-cfemail');if(a){s='';r=parseInt(a.substr(0,2),16);for(j=2;a.length-j;j+=2){c=parseInt(a.substr(j,2),16)^r;s+=String.fromCharCode(c);}s=document.createTextNode(s);l.parentNode.replaceChild(s,l);}}catch(e){}})();
+/* ]]> */
+</script></a>. Please be sure to include your name, email address, and daytime phone number in case we wish to contact you.
 </p>
 <br>
 <p align="center" style="text-align:center">
@@ -345,6 +342,11 @@ If you have further questions or concerns that have not been addressed in this s
 
 </script>
 
+<script type="text/javascript">
+/* <![CDATA[ */
+(function(){try{var s,a,i,j,r,c,l=document.getElementsByTagName("a"),t=document.createElement("textarea");for(i=0;l.length-i;i++){try{a=l[i].getAttribute("href");if(a&&"www.cloudflare.com/email-protection"==a.substr(7 ,35)){s='';j=43;r=parseInt(a.substr(j,2),16);for(j+=2;a.length-j&&a.substr(j,1)!='X';j+=2){c=parseInt(a.substr(j,2),16)^r;s+=String.fromCharCode(c);}j+=1;s+=a.substr(j,a.length-j);t.innerHTML=s.replace(/</g,"&lt;").replace(/>/g,"&gt;");l[i].setAttribute("href","mailto:"+t.value);}}catch(e){}}}catch(e){}})();
+/* ]]> */
+</script>
 
 
 </div></div></body></html>
