--- a/b/br/bri/britainexpress.com.html
+++ b/b/br/bri/britainexpress.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the britainexpress.com privacy policy that was archived on 2013-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131205070443id_/http%3A//www.britainexpress.com/Privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the britainexpress.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215005122id_/http%3A//www.britainexpress.com/Privacy.htm) for the most accurate reproduction.-->
 
 <html><head><title>Britain Express Privacy Policy</title>
 <meta name="Description" content="Privacy policy detail for Britain Express, the UK Travel and heritage guide">
@@ -391,25 +391,25 @@ $(".accordion div:not('#first')").hide();
 <div id="accordion" class="accordion">
     <h3 class="active">Name the Historic attraction</h3>
     <div id="first">
-<a href="/history_mystery.htm?image=1038">
-<img src="/images/history/mystery/thumbs/1038.jpg" alt="Name the mystery historic attraction" width="160" class="AttractionImage"></a>
+<a href="/history_mystery.htm?image=949">
+<img src="/images/history/mystery/thumbs/949.jpg" alt="Name the mystery historic attraction" width="160" class="AttractionImage"></a>
 <br>
-<a href="/history_mystery.htm?image=1038" class="formtext-large">See larger image</a>
+<a href="/history_mystery.htm?image=949" class="formtext-large">See larger image</a>
 <br><br>
 <form name="choices" id="choices" method="post" action="">
 
   <select id="choice" class="topnav">
     <option value="" class="topnav">Select an attraction:</option>
-        <option value="2468" class="topnav">Blakely Rise</option>
-        <option value="995" class="topnav">Carloway Broch</option>
-        <option value="35" class="topnav">Castlerigg</option>
-        <option value="4674" class="topnav">Din Lligwy</option>
-        <option value="40" class="topnav">Rollright Stones</option>
-        <option value="1038" class="topnav">Stones of Stenness</option>
-        <option value="3433" class="topnav">The Hurlers</option>
+        <option value="147" class="topnav">Blenheim Palace</option>
+        <option value="1194" class="topnav">Brodie Castle</option>
+        <option value="949" class="topnav">Buckingham Palace</option>
+        <option value="3110" class="topnav">Chilham Castle</option>
+        <option value="664" class="topnav">Gwydir Castle</option>
+        <option value="1235" class="topnav">Mellerstain House</option>
+        <option value="2534" class="topnav">Sandringham</option>
       </select> 
-  <input type="hidden" id="correct" value="1038">
-   <input type="hidden" id="image_id" value="1038"><br>
+  <input type="hidden" id="correct" value="949">
+   <input type="hidden" id="image_id" value="949"><br>
   <input type="button" class="topnav" style="margin-top:5px" onclick="ajaxFunction()" value="Submit Answer">
 
 </form><br>
@@ -420,51 +420,51 @@ $(".accordion div:not('#first')").hide();
   <p><a href="/heritage-travel-article.htm?travel=5450">View this year's winners.</a></p>
 </div>
  <h3>British History Quiz</h3>
-  <div id="second" style="display: none;"><p>This Chancellor of England was named Archbishop of Canterbury by Richard II, who then banished him. He returned when Henry IV deposed Richard.</p>
+  <div id="second" style="display: none;"><p>This Scottish lord of Badenoch was murdered by Robert the Bruce in 1306</p>
       <form id="quizzes" name="quizzes" method="post" action="">
         <select name="quizz" id="quizz" class="topnav">
        <option value="">Select:</option>
-        <option value="Bishop Odo" class="topnav">Bishop Odo</option>
-        <option value="Lanfranc" class="topnav">Lanfranc</option>
-        <option value="Stephen Langton" class="topnav">Stephen Langton</option>
-        <option value="Thomas Arundel" class="topnav">Thomas Arundel</option>
-        <option value="Thomas Becket" class="topnav">Thomas Becket</option>
+        <option value="Archibald Macleish" class="topnav">Archibald Macleish</option>
+        <option value="John Balliol" class="topnav">John Balliol</option>
+        <option value="John Comyn" class="topnav">John Comyn</option>
+        <option value="John Douglas" class="topnav">John Douglas</option>
+        <option value="William Wallace" class="topnav">William Wallace</option>
       </select> 
-  <input type="hidden" id="quizz_correct" value="Thomas Arundel">
-  <input type="hidden" id="quizz_id" value="15"><br>
+  <input type="hidden" id="quizz_correct" value="John Comyn">
+  <input type="hidden" id="quizz_id" value="78"><br>
   <input type="button" class="topnav" style="margin-top:5px" onclick="quizzAjax()" value="Submit Answer">
       
       </form><br>
    <p>&nbsp;<a href="#" id="quiz_clickclue1" class="title">Clue</a></p>
-      <div id="quiz_clue1" style="display: none"><p class="blue">He served as Richard's chancellor from 1386-1389, and again from 1391-1396</p><p><a href="#" id="quiz_clickclue2" class="title">Another clue</a></p></div>
-      <div id="quiz_clue2" style="display: none"><p class="blue">He served as Henry IV's chancellor untilthe Beaufort's briefly ousted him from office in 1410</p></div>
+      <div id="quiz_clue1" style="display: none"><p class="blue">He father was nicknamed 'The Black'</p><p><a href="#" id="quiz_clickclue2" class="title">Another clue</a></p></div>
+      <div id="quiz_clue2" style="display: none"><p class="blue">His nickname was 'The Red'</p></div>
     <div id="quizz_answer" style="display: none;"></div>
   </div>
  <h3>This Day in British History</h3>
     <div id="third" style="display: none;">
-      <p class="displayboxheadline">05 December, 1766</p>
-    <p class="cat-head">Christie's auctioneers hold first sale</p><p>The date is open to some debate, but according to Christies themselves, James Christie conducted his first sale in 1766.</p></div>
+      <p class="displayboxheadline">15 February, 1504</p>
+    <p class="cat-head">Prince Henry (Henry VIII) invested as Prince of Wales</p><p>Henry was the second son of Henry VII, and only became Prince of Wales after the death in 1502 of his elder brother Arthur</p></div>
   <h3>Monarch Mayhem</h3>
-    <div id="fourth" style="display: none;"><p>This monarch took the throne in 1952 after the death of George VI</p>
+    <div id="fourth" style="display: none;"><p>This monarch had the nickname 'Yea-and-Nay' for his frequent about-faces</p>
       <form id="monarchs" name="monarchs" method="post" action="">
         <select name="monarch" id="monarch" class="topnav">
        <option value="">Select:</option>
-        <option value="Anne" class="topnav">Anne</option>
-        <option value="Elizabeth I" class="topnav">Elizabeth I</option>
-        <option value="Elizabeth II" class="topnav">Elizabeth II</option>
-        <option value="Mary I" class="topnav">Mary I</option>
-        <option value="Mary II" class="topnav">Mary II</option>
-        <option value="Matilda" class="topnav">Matilda</option>
-        <option value="Victoria" class="topnav">Victoria</option>
+        <option value="Edward I" class="topnav">Edward I</option>
+        <option value="Edward II" class="topnav">Edward II</option>
+        <option value="Henry I" class="topnav">Henry I</option>
+        <option value="Henry II" class="topnav">Henry II</option>
+        <option value="Richard I" class="topnav">Richard I</option>
+        <option value="Stephen" class="topnav">Stephen</option>
+        <option value="William II" class="topnav">William II</option>
       </select> 
-  <input type="hidden" id="monarch_correct" value="Elizabeth II">
-  <input type="hidden" id="monarch_id" value="115"><br>
+  <input type="hidden" id="monarch_correct" value="Richard I">
+  <input type="hidden" id="monarch_id" value="23"><br>
   <input type="button" class="topnav" style="margin-top:5px" onclick="monarchAjax()" value="Submit Answer">
       
       </form><br>
      <p>&nbsp;<a href="#" id="clickclue1" class="title">Clue</a></p>
-      <div id="clue1" style="display: none"><p class="blue">She married Philip, Duke of Edinburgh in 1947</p><p><a href="#" id="clickclue2" class="title">Another clue</a></p></div>
-      <div id="clue2" style="display: none"><p class="blue">She is the second monarch with her name</p></div>
+      <div id="clue1" style="display: none"><p class="blue">He was the second Plantagenet king</p><p><a href="#" id="clickclue2" class="title">Another clue</a></p></div>
+      <div id="clue2" style="display: none"><p class="blue">His more popular nickname was 'Lionheart'</p></div>
     <div id="monarch_answer" style="display: none;"></div>
     </div>
 </div><br><br>
@@ -491,18 +491,25 @@ google_ui_features = "rc:0";
   </tr>
 </tbody></table>
 <br>
-<br><table width="210" border="0" cellpadding="1" cellspacing="0" bgcolor="#003366">
+<table width="210" border="0" cellpadding="1" cellspacing="0" bgcolor="#CCCCCC">
   <tbody><tr> 
-    <td><table width="100%" border="0" cellpadding="4" cellspacing="0" bgcolor="#ecece8">
+    <td> 
+      <table width="100%" border="0" cellpadding="3" cellspacing="0" bgcolor="#ecece8">
         <tbody><tr> 
-          <td bgcolor="#E0EAFF" class="BGA7C2ED">&nbsp;<span class="blue-bold-link">Car Rental</span></td>
+          <td bgcolor="#FFFFCC" class="hotelheader" style="text-align:center"> 
+          <strong class="content-title">National Trust</strong></td>
         </tr>
         <tr> 
-          <td bgcolor="#FFFFFF" class="medium-black-text"> <a href="/Travel/cars/car-rental-uk.htm" class="most-popular-title"><strong>The 
-            Car Rental Centre</strong></a> <span class="formtext-large">Wholesale 
-            rates, instant quotes, from all the major car rental companies</span></td>
+          <td bgcolor="#FFFFFF" class="medium-black-text"> 
+            <p align="center"><a href="http://nationaltrustmemberships.at/BritainExpress?CTY=1&amp;CID=16791" rel="nofollow"><img src="http://b1.perfb.com/b1.php?ID=16791&amp;PURL=nationaltrustmemberships.at/BritainExpress" border="0" alt="National Trust membership"></a><a href="http://nationaltrustmemberships.at/BritainExpress?CTY=2&amp;CID=22668" rel="nofollow"></a>
+            </p>
+            <p align="center"><a href="http://nationaltrustmemberships.at/BritainExpress?DURL=http://www.nationaltrust.org.uk/main/w-trust/w-support/w-jointoday/w-jointoday-categories_costs/w-jointoday-gift_membership.htm" class="heading" rel="nofollow"><strong>National Trust  membership</strong></a></p>
+            <p class="form-text">Free entry to National Trust properties throughout England, Wales, and Northern Ireland, plus discounted admission to National Trust for Scotand properties </p>
+            <p class="formtext-large" style="text-align:center"><a href="http://nationaltrustmemberships.at/BritainExpress?DURL=http://www.nationaltrust.org.uk/main/w-trust/w-support/w-jointoday/w-jointoday-categories_costs/w-jointoday-gift_membership.htm" class="searchtitle" rel="nofollow"><strong><em>Membership details</em></strong></a></p>
+<p align="center"><a href="/national-trust.htm" class="heading"><strong><u>About the National Trust</u></strong></a></p></td>
         </tr>
-      </tbody></table></td>
+      </tbody></table>
+    </td>
   </tr>
 </tbody></table>
 <br>
