--- a/e/es/esl/eslbase.com.html
+++ b/e/es/esl/eslbase.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the eslbase.com privacy policy that was archived on 2013-08-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130821020649id_/http%3A//www.eslbase.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the eslbase.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215005525id_/http%3A//www.eslbase.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
@@ -8,7 +8,7 @@
 <meta name="robots" content="index, follow">
 <link rel="canonical" href="http://www.eslbase.com/privacy">
 <!--[if IE]><![endif]-->
-<link rel="stylesheet" href="http://cdn.eslbase.com/includes/css/screen_2013_07_v2.css" type="text/css" media="screen, projection">  
+<link rel="stylesheet" href="http://www.eslbase.com/includes/css/screen_2013_07_v5.css" type="text/css" media="screen, projection">  
 <!--[if IE]>
 <link rel="stylesheet" href="http://cdn.eslbase.com/includes/css/ie.css" type="text/css" media="screen, projection">
 <![endif]-->  
@@ -234,7 +234,7 @@ or <a href="/contact">click here</a>.
 </div>
 <div class="span-7">
 <p class="small quiet icon" style="margin-top:10px">
-© 2013 Eslbase. All rights reserved
+© 2014 Eslbase. All rights reserved
 </p>
 </div>
 <div class="span-5">
@@ -245,10 +245,10 @@ or <a href="/contact">click here</a>.
 <div class="span-12 last">
 <p class="small quiet right" style="margin-top:10px">
 Follow Eslbase on
-<a href="http://www.facebook.com/eslbase" target="_blank" title="Follow us on Facebook"><img class="social-footer" alt="Facebook icon" src="http://cdn.eslbase.com/images/social/facebookcolour.png" width="32" height="32"></a>
-<a href="https://plus.google.com/108172461703097394423?prsrc=3" target="_blank" title="Follow us on Google Plus" style="text-decoration:none;"><img src="https://ssl.gstatic.com/images/icons/gplus-32.png" alt="" class="social-footer" style="border:0;width:32px;height:32px;"></a>
-<a href="http://twitter.com/eslbase" target="_blank" title="Follow us on Twitter"><img class="social-footer" alt="Twitter icon" src="http://cdn.eslbase.com/images/social/twittercolour.png" width="32" height="32"></a>
-<a href="http://www.linkedin.com/company/3055386" target="_blank" title="Follow us on Linked in"><img class="social-footer" alt="Linked in icon" src="http://cdn.eslbase.com/images/social/linkedin.png" width="32" height="32"></a>
+<a href="http://www.facebook.com/eslbase" target="_blank" title="Follow us on Facebook"><img class="social-footer" alt="Facebook icon" src="http://cdn.eslbase.com/images/social/facebookfollow_v2.png" width="32" height="32"></a>
+<a href="http://google.com/+Eslbase" target="_blank" title="Follow us on Google Plus" style="text-decoration:none;"><img src="http://cdn.eslbase.com/images/social/googlefollow_v2.png" alt="" class="social-footer" style="border:0;width:32px;height:32px;"></a>
+<a href="http://twitter.com/eslbase" target="_blank" title="Follow us on Twitter"><img class="social-footer" alt="Twitter icon" src="http://cdn.eslbase.com/images/social/twitterfollow_v2.png" width="32" height="32"></a>
+<a href="http://www.linkedin.com/company/3055386" target="_blank" title="Follow us on Linked in"><img class="social-footer" alt="Linked in icon" src="http://cdn.eslbase.com/images/social/linkedinfollow_v2.png" width="32" height="32"></a>
 </p>
 </div>
 
